--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,7 +2,7 @@
 	position: sticky;
 	top: 0;
 	background-color: $color-white;
-	padding: 2rem 3rem;
+	padding: 2rem 3rem 0;
 
 	&__top {
 		display: grid;
