--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -11,6 +11,15 @@
 		align-items: stretch;
 	}
 
+	&__logo {
+		font-size: 2.4rem;
+
+		svg {
+			height: 2rem;
+			margin-right: .7rem;
+		}
+	}
+
 	&__social-media {
 		justify-self: center;
 	}
