--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -32,9 +32,13 @@ $transition-fast: .2s;
 
 // BORDER_RADIUS
 $hasRoundCorners: true;
-$border-radius-tiny: .3rem;
-$border-radius-small: .7rem;
+$border-radius-tiny: .2rem;
+$border-radius-small: .5rem;
 $border-radius-big: 1rem;
 
 // SHADOWS
 $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+
+// Z-INDEX
+$header-z-index: 1000;
+$footer-z-index: 1000;
