--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/gallery";
 @import "components/label";
 @import "components/review-stars";
+@import "components/tabs";
 
 // Layout
 @import "layout/header";
