--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 @import "components/label";
 @import "components/review-stars";
 @import "components/tabs";
+@import "components/sizes";
 
 // Layout
 @import "layout/header";
