--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1,4 +1,8 @@
 .content {
 	min-height: 65vh;
-	padding: 5rem 10vw;
+	padding: 5rem 13vw;
+
+	@include respond(tab) {
+		padding: 5rem 10vw;
+	}
 }
