--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -17,25 +17,27 @@ body {
 
 
 .heading-primary {
-
-}
-
-.heading-secondary {
-    //color: $color-primary;
-    text-transform: lowercase;
-    font-size: 5rem;
-    //font-weight: 300;
-    margin-bottom: 3rem;
-    transition: all .2s;
-    font-weight: 800;
+    font-size: 4.8rem;
 
     @include respond(tab-port) {
-        font-size: 4rem;
+        font-size: 4.1rem;
     }
 
     @include respond(phone) {
-        font-size: 3.3rem;
-        margin-bottom: 1rem;
+        font-size: 3.5rem;
+    }
+}
+
+.heading-secondary {
+    font-size: 3.4rem;
+    transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
     }
 }
 
