--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,7 +2,7 @@
   &,
   &:link,
   &:visited {
-    text-transform: uppercase;
+    //text-transform: uppercase;
     padding: 1rem 2rem;
     display: inline-block;
     border-radius: $border-radius-small;
@@ -26,6 +26,18 @@
   &--default {
     background-color: $color-white;
     border: 1px solid $color-grey-medium;
+
+    &:hover {
+      color: $color-white;
+      background-color: darken($color-primary, 5%);
+      border: 1px solid $color-primary;
+    }
+  }
+
+  &--primary-light {
+    background-color: $color-white;
+    border: 1px solid $color-primary;
+    color: $color-primary;
 
     &:hover {
       color: $color-white;
