Form validation. Add review logic start.

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-primary-60: rgba($color-primary, 0.6);
 $color-primary-80: rgba($color-primary, 0.8);
 $color-primary-dark: darken($color-primary, 20);
 
+$color-danger: #e76565;
 
 $color-white: #fff;
 $color-grey-light-bg: #F6F6F6;
