--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -15,6 +15,13 @@ body {
     }
 }
 
+.error-text {
+    font-size: 1.4rem;
+    margin-top: .5rem;
+    padding-left: .5rem;
+    color: $color-danger;
+}
+
 
 .heading-primary {
     font-size: 4.8rem;
