--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,6 @@
 @import "components/navigation";
 @import "components/button";
 @import "components/card";
-@import "pages/product";
 @import "components/gallery";
 @import "components/label";
 @import "components/review-stars";
@@ -29,6 +28,8 @@
 @import "layout/footer";
 
 // Pages
+@import "pages/product";
+@import "pages/cart";
 
 
 
