--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -44,7 +44,7 @@
 			position: absolute;
 			right: 0;
 			bottom: 0;
-			transform: translateX(.5rem);
+			transform: translate(-1rem, -0.5rem);
 			display: grid;
 			align-items: center;
 			justify-content: center;
