Cart popup logic

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@
 @import "components/review-stars";
 @import "components/tabs";
 @import "components/sizes";
+@import "components/cart-item";
 
 // Layout
 @import "layout/header";
