--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,14 +1,24 @@
 .gallery {
+	grid-row: 1 / 3;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 	align-content: start;
+
+	@include respond(phone) {
+		grid-row: unset;
+	}
+
 
 	&__selected {
 		overflow: hidden;
 		transition: $transition-fast;
 		line-height: 0;
 		max-height: 60rem;
+
+		@include respond(phone) {
+			max-height: 50rem;
+		}
 	}
 
 	&__thumbnails {
