--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -8,42 +8,17 @@
 
 	// NAVIGATION LIST
 	&__list {
-		display: grid;
-		grid-template-columns: repeat(4, min-content);
-		text-decoration: none;
-		grid-gap: .2rem;
+		display: flex;
 		transition: all $transition-main;
 
 		@include respond('phone') {
-			position: absolute;
-			top: 6rem; //header height
-			right: 0;
-			transform: translateX(100%);
-
-			grid-template-columns: none;
-			grid-gap: 0;
-
-			width: 65vw;
-			background-color: $color-grey-light-header;
-			box-shadow: $box-shadow;
-		}
-
-		&.open {
-			transform: translateX(0);
 		}
 	}
 
 	&__item {
-		display: inline-block;
-		width: 100%;
-		height: 100%;
 		text-align: center;
 		list-style: none;
 		transition: $transition-main;
-
-		@include respond('phone') {
-			border-bottom: 1px solid $color-grey-light;
-		}
 	}
 
 	&__link {
