--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -8,7 +8,7 @@
 		}
 
 		&__link {
-			padding: 1rem 3rem;
+			padding: 1rem;
 			border-bottom: 1px solid $color-grey-light;
 			flex-grow: 1;
 			transition: $transition-main;
