--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1,8 +1,20 @@
 .content {
+	display: grid;
+	justify-content: center;
 	min-height: 65vh;
-	padding: 5rem 13vw;
+	margin: 5rem auto;
+	max-width: 100rem;
 
-	@include respond(tab) {
-		padding: 5rem 10vw;
+	@include respond(tab-land) {
+		padding: 0 10vw;
+	}
+
+	@include respond(tab-port) {
+		padding: 0 5vw;
+	}
+
+	@include respond(phone) {
+		padding: 0 2rem;
+		margin: 2rem auto;
 	}
 }
