--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -6,6 +6,12 @@
 		display: grid;
 		grid-template-columns: 1fr 4fr;
 		padding: 3rem 10rem;
+
+		@include respond(phone) {
+			grid-template-columns: none;
+			padding: 3rem;
+			gap: 3rem;
+		}
 	}
 
 	&__info {
@@ -29,9 +35,19 @@
 	&__links {
 		display: flex;
 		justify-content: space-evenly;
+
+		@include respond(phone) {
+			flex-wrap: wrap;
+			justify-content: start;
+			row-gap: 2rem;
+		}
 	}
 
 	&__links-block {
+
+		@include respond(phone) {
+			flex-basis: 50%;
+		}
 
 		&--name {
 			font-size: 2.4rem;
