--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,14 +6,18 @@
 	z-index: $header-z-index;
 
 	&__top {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		justify-content: end;
-		align-items: stretch;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding-bottom: 2rem;
 	}
 
 	&__logo {
 		font-size: 2.4rem;
+
+		@include respond('phone') {
+			font-size: 1.8rem;
+		}
 
 		svg {
 			height: 2rem;
@@ -26,17 +30,21 @@
 		display: flex;
 		gap: 3rem;
 
+		@include respond('phone') {
+			display: none;
+		}
+
 		svg {
 			height: 1.5rem;
 		}
 	}
 
 	&__icons {
-		justify-self: end;
+		justify-content: end;
 		display: flex;
 
 		.btn {
-			padding: 1rem;
+			padding: 0 1rem;
 		}
 
 		.cart-btn {
@@ -47,7 +55,7 @@
 			position: absolute;
 			right: 0;
 			bottom: 0;
-			transform: translate(-0.2rem, -0.5rem);
+			transform: translate(-0.2rem, 0.2rem);
 			display: grid;
 			align-items: center;
 			justify-content: center;
