--- a/src/styles/components/_cart-item.scss
+++ b/src/styles/components/_cart-item.scss
@@ -5,13 +5,18 @@
 	margin: 0 4rem;
 	padding: 3rem 0;
 	border-bottom: 1px solid $color-grey-light;
+	position: relative;
+
+	@include respond(phone) {
+		flex-direction: column;
+		margin: 0 2.5rem;
+	}
 
 	&__image {
 		height: 7rem;
 		width: 7rem;
 		overflow: hidden;
 		border-radius: $border-radius-big;
-		align-content: start;
 	}
 
 	&__info {
@@ -23,7 +28,7 @@
 	}
 
 	&__name {
-		font-size: 3rem;
+		font-size: 2.5rem;
 		line-height: 1.2;
 	}
 
@@ -35,9 +40,9 @@
 	}
 
 	.btn {
-		font-size: 3rem;
-		width: 4rem;
-		height: 4rem;
+		font-size: 2.5rem;
+		width: 3rem;
+		height: 3rem;
 		padding: 0;
 		border-radius: $border-radius-big;
 		color: $color-grey-medium;
@@ -51,7 +56,6 @@
 
 	&__controls {
 		display: flex;
-		gap: 1rem;
 		align-items: center;
 		color: $color-grey-medium;
 	}
@@ -65,15 +69,27 @@
 		display: flex;
 		align-items: center;
 		justify-content: end;
-		min-width: 16rem;
-		font-size: 3rem;
+		min-width: 13rem;
+		font-size: 2.5rem;
 		text-align: right;
+
+		@include respond(phone) {
+			position: absolute;
+			bottom: 3rem;
+			right: 0;
+		}
 	}
 
 	&__remove {
 		display: flex;
 		align-items: center;
 		justify-content: end;
+
+		@include respond(phone) {
+			position: absolute;
+			top: 3rem;
+			right: 0;
+		}
 	}
 
 }
