--- a/src/styles/pages/_cart.scss
+++ b/src/styles/pages/_cart.scss
@@ -17,9 +17,22 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		width: 60vw;
+		max-width: 100rem;
 		height: auto;
 		background-color: $color-white;
 		border-radius: $border-radius-big;
+
+		@include respond(tab-land) {
+			width: 70vw;
+		}
+
+		@include respond(tab-port) {
+			width: 80vw;
+		}
+
+		@include respond(phone) {
+			width: 90vw;
+		}
 	}
 
 	&__total {
@@ -32,6 +45,15 @@
 	&__footer {
 		display: flex;
 		justify-content: space-between;
-		padding: 2rem 5rem;
+		padding: 2rem 4rem;
+
+		@include respond(phone) {
+			padding: 2rem 2.5rem;
+			gap: 2rem;
+
+			button {
+				flex-grow: 1;
+			}
+		}
 	}
 }
