--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -25,13 +25,15 @@ body {
 
 .heading-primary {
     font-size: 4.8rem;
+    line-height: 1.4;
 
     @include respond(tab-port) {
-        font-size: 4.1rem;
+        font-size: 3.5rem;
     }
 
     @include respond(phone) {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
+        line-height: 1.2;
     }
 }
 
