--- a/src/styles/pages/_cart.scss
+++ b/src/styles/pages/_cart.scss
@@ -21,6 +21,8 @@
 		height: auto;
 		background-color: $color-white;
 		border-radius: $border-radius-big;
+		max-height: 90vh;
+		overflow-y: scroll;
 
 		@include respond(tab-land) {
 			width: 70vw;
@@ -35,10 +37,15 @@
 		}
 	}
 
+	&__message {
+		padding: 2rem 4rem;
+		font-size: 2rem;
+	}
+
 	&__total {
 		text-align: right;
 		background-color: $color-grey-light-bg;
-		font-size: 3rem;
+		font-size: 2.5rem;
 		padding: 1rem 4rem;
 	}
 
