--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -42,6 +42,15 @@
     }
   }
 
+  &--primary {
+    color: $color-white;
+    background-color: $color-primary;
+
+    &:hover:enabled {
+      background-color: darken($color-primary, 5%);
+    }
+  }
+
   &--primary-light {
     background-color: $color-white;
     border: 1px solid $color-primary;
@@ -54,13 +63,9 @@
     }
   }
 
-  &--primary {
-    color: $color-white;
-    background-color: $color-primary;
-
-    &:hover:enabled {
-      background-color: darken($color-primary, 5%);
-    }
+  &--secondary {
+    background-color: $color-white;
+    border: 1px solid $color-grey-medium;
   }
 
   &.xs {
