--- a/src/styles/pages/_cart.scss
+++ b/src/styles/pages/_cart.scss
@@ -22,7 +22,7 @@
 		background-color: $color-white;
 		border-radius: $border-radius-big;
 		max-height: 90vh;
-		overflow-y: scroll;
+		overflow-y: auto;
 
 		@include respond(tab-land) {
 			width: 70vw;
