--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -1,3 +1,4 @@
+.product-page,
 .product {
 	&__data,
 	&__reviews {
@@ -13,10 +14,12 @@
 	&__data {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: auto 1fr;
 		gap: 4rem;
 
 		@include respond(phone) {
 			grid-template-columns: none;
+			grid-template-rows: none;
 			gap: 0;
 		}
 	}
