--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,17 +1,23 @@
 .card {
 	position: relative;
 	transition: $transition-main;
-	border-radius: $border-radius-big;
 	overflow: hidden;
 	display: grid;
 	grid-template-rows: auto 1fr;
 	background-color: $color-white;
-	padding: .2rem;
+	border: 17px solid transparent;
+	border-radius: $border-radius-big;
 
 	&:hover {
+		box-shadow: 0 0 5px $color-grey-light;
+
+		.card__info {
+			transform: translateY(-5rem);
+		}
 		.card__cta {
 			opacity: 1;
 			visibility: visible;
+			transform: translate(0, 3rem);
 		}
 	}
 
@@ -22,33 +28,31 @@
 	&__info {
 		align-self: stretch;
 
-		padding: 1rem 2rem 2rem;
+		padding: 1rem 0 0;
 		display: grid;
 		align-items: stretch;
+		background-color: $color-white;
+		transition: $transition-main;
 	}
 
 	&__price {
 		align-self: end;
+		font-size: 1.4rem;
+		font-weight: 600;
 	}
 
 	&__title {
-		font-size: 2rem;
+		font-size: 1.6rem;
 	}
 
 	&__cta {
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		width: 100%;
-		height: 100%;
-		display: grid;
-		align-items: center;
-		justify-content: center;
-		transform: translate(-50%, -50%);
+		bottom: -2rem;
+		left: 0;
+		transform: translate(0, 0);
 		opacity: 0;
 		visibility: hidden;
-		background-color: rgba($color-grey-dark, .8);
 		transition: $transition-main;
+		transition-delay: .2s;
 	}
-
 }
