--- a/src/styles/pages/_shop.scss
+++ b/src/styles/pages/_shop.scss
@@ -1,18 +1,24 @@
 .shop-page {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 3rem 2rem;
-	justify-content: center;
-	//background-color: $color-white;
-	//border-radius: $border-radius-big;
-	padding: 2rem;
+	grid-template-columns: 1fr 6fr;
+	background-color: $color-white;
 
-	@include respond(tab-port) {
-		grid-template-columns: repeat(2, 1fr);
+	&__products {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: .2rem;
+		justify-content: center;
+		border-radius: $border-radius-big;
+		padding: 2rem;
+
+		@include respond(tab-port) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@include respond(phone) {
+			grid-template-columns: 1fr;
+		}
 	}
 
-	@include respond(phone) {
-		grid-template-columns: 1fr;
-	}
 
 }
